--- a/Assignments/PDP-Assignment-10/pom.xml
+++ b/Assignments/PDP-Assignment-10/pom.xml
@@ -66,6 +66,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 
 </project>
