--- a/Assignments/PDP-Assignment-10/pom.xml
+++ b/Assignments/PDP-Assignment-10/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>jfreechart</artifactId>
             <version>1.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 
 </project>
