--- a/Assignments/PDP-Assignment-10/pom.xml
+++ b/Assignments/PDP-Assignment-10/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <jdk.version>1.8</jdk.version>
         <jarName>virtualTrading</jarName>
+        <powermock.version>1.7.1</powermock.version>
     </properties>
 
     <build>
