--- a/Assignments/PDP-Assignment-10/pom.xml
+++ b/Assignments/PDP-Assignment-10/pom.xml
@@ -74,15 +74,10 @@
             <version>1.5.0</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.google.code.gson</groupId>-->
-            <!--<artifactId>gson</artifactId>-->
-            <!--<version>2.8.5</version>-->
-        <!--</dependency>-->
         <dependency>
-            <groupId>com.owlike</groupId>
-            <artifactId>genson</artifactId>
-            <version>1.4</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
         </dependency>
     </dependencies>
 
